--- a/software/cananolab-client-new/src/app/cananolab-client/main-display/home/browse-cananolab/browse-cananolab.component.scss
+++ b/software/cananolab-client-new/src/app/cananolab-client/main-display/home/browse-cananolab/browse-cananolab.component.scss
@@ -36,13 +36,11 @@
 }
 
 .home-page-right-td{
-    background-color: #a447ff;
     padding: 0 0 0 10px;
     border: solid $borderColor 1px;
 }
 
 .home-page-right-td-content{
-    background-color: #119500;
     padding: 0;
     margin-top: -4px;
 }
