--- a/software/cananolab-client-new/src/app/cananolab-client/top-main-menu/top-main-menu.component.scss
+++ b/software/cananolab-client-new/src/app/cananolab-client/top-main-menu/top-main-menu.component.scss
@@ -45,16 +45,6 @@ border-bottom:1px solid #81FFFE;
     padding:0px;
 }
 
-.nav-menu-top-item {
-    height:30px;
-    padding:0px 30px 0px 30px !important;
-    font-size:12px;
-    font-weight:bold;
-    color:#81FFFE;
-    border-width:0px 1px 0px 0px !important;
-    border:solid #81FFFE;
-    vertical-align:middle;
-}
 
 .nav-menu-top-item {
     height:30px;
@@ -62,14 +52,19 @@ border-bottom:1px solid #81FFFE;
     font-size:12px;
     font-weight:bold;
     color:#81FFFE;
-    border-width:0px 1px 0px 0px !important;
-    border:solid #81FFFE;
     vertical-align:middle;
+    border:none;
+    background-image:url("../../../assets/images/mainMenuSeparator.gif");
+    background-repeat:no-repeat;
+    background-position: center right;
 }
 .nav-menu-top-item.disabled{
     width:160px;
     color:#fff;
     padding:0px 0px 0px 10px !important;
     text-align:left;
+    border:solid #81FFFE;
+    border-width:0px 1px 0px 0px;
+    background-image:none;
 }
 
